[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clusttraj"
version = "0.1.0"
authors = [
  { name="Henrique Musseli Cezar", email="henrique.musseli@gmail.com" },
]
description = "Performs clustering of molecular dynamics and Monte Carlo trajectories."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",    
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "openbabel>3.0",
    "rmsd",
    "qml @ git+https://github.com/qmlcode/qml@develop",
    "scipy",
    "scikit-learn",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/hmcezar/clusttraj"
"Bug Tracker" = "https://github.com/hmcezar/clusttraj/issues"