[build-system]
requires = ["setuptools", "numpy", "swig"]
build-backend = "setuptools.build_meta"

[project]
name = "clusttraj"
version = "0.1.0"
authors = [
  { name="Henrique Musseli Cezar", email="henrique.musseli@gmail.com" },
]
description = "Performs clustering of molecular dynamics and Monte Carlo trajectories."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "rmsd",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "qml @ git+https://github.com/hmcezar/qml@develop",
    "openbabel-wheel>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/hmcezar/clusttraj"
"Bug Tracker" = "https://github.com/hmcezar/clusttraj/issues"

[project.scripts]
clusttraj = "clusttraj.clusttraj:main"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov[all]"
]

[tool.setuptools]
packages = ["clusttraj"]
