[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "clusttraj"
authors = [
  { name = "Henrique Musseli Cezar", email = "henrique.musseli@gmail.com" },
]
description = "Performs clustering of molecular dynamics and Monte Carlo trajectories."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "clusttraj.__version__" }

[project.urls]
"Homepage" = "https://github.com/hmcezar/clusttraj"
"Bug Tracker" = "https://github.com/hmcezar/clusttraj/issues"

[project.scripts]
clusttraj = "clusttraj.main:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov[all]"]
docs = ["sphinx", "sphinx_rtd_theme"]
lint = ["ruff", "black"]
qml = ["qml"] # you can install from git+https://github.com/hmcezar/qml@develop
all = ["clusttraj[test,docs,lint,qml]"]

[tool.setuptools]
packages = ["clusttraj"]

[tool.black]
line-length = 89

[tool.ruff]
line-length = 89
ignore = ["E501"]
